--- a/Michaelsoft.ContentManager.Client/Views/Shared/_AuthorizeForm.cshtml
+++ b/Michaelsoft.ContentManager.Client/Views/Shared/_AuthorizeForm.cshtml
@@ -21,6 +21,8 @@
     </div>
 </form>
 
+<script src="~/_content/Michaelsoft.ContentManager.Client/js/jsencrypt.min.js"></script>
+
 <script type="text/javascript">
     function loadCertificate() {
         var fr = new FileReader();
