--- a/Michaelsoft.ContentManager.Client/Views/Shared/_ContentManagerLayout.cshtml
+++ b/Michaelsoft.ContentManager.Client/Views/Shared/_ContentManagerLayout.cshtml
@@ -21,12 +21,11 @@
     <div class="content-manager_copyright">
         <div class="title">Content Manager</div>
         <div class="link">Open Source by <a href="https://github.com/michaeldisaro">Michael Disarò</a></div>
+        <div class="link">Powered by <a href="https://ckeditor.com/">CKEditor</a></div>
     </div>
 </footer>
 <script src="~/_content/Michaelsoft.ContentManager.Client/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/_content/Michaelsoft.ContentManager.Client/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-<script src="~/_content/Michaelsoft.ContentManager.Client/js/jsencrypt.min.js"></script>
-<script src="~/_content/Michaelsoft.ContentManager.Client/js/content-manager.js"></script>
 @RenderSection("Scripts", required: false)
 </body>
 </html>
