--- a/Michaelsoft.ContentManager.Client/Views/Shared/_ContentList.cshtml
+++ b/Michaelsoft.ContentManager.Client/Views/Shared/_ContentList.cshtml
@@ -10,7 +10,7 @@
     List<Content> contents;
     try
     {
-        contents = ContentManagerContentApiService.ListContents().Result;
+        contents = ContentManagerContentApiService.List().Result;
     }
     catch (Exception)
     {
